# crawler_engine

./: .gitignore  OUTPUT_FORMAT_GUIDE.md  PROJECT_STRUCTURE.md  README.md  USAGE.md  USAGE_MODES.md  env.example  extract.py  intelligent_extractor.py  pyproject.toml  requirements-windows.txt  requirements.txt  setup.py  simple_extractor.py  smart_extractor.py
archive/: FREE_HOSTING_GUIDE.md  README.md  comprehensive_test.py  example_usage.py  extract.py  final_demo.py  quick_test.py  test_bbc_simple.py  test_content_comparison.py  test_heuristic.py
archive/examples/: viral_demos.py
src/intelligent_web_extractor/: __init__.py  cli.py
src/intelligent_web_extractor/core/: batch_processor.py  custom_extractor.py  extractor.py  semantic_extractor.py
src/intelligent_web_extractor/models/: config.py  extraction_result.py
src/intelligent_web_extractor/strategies/: adaptive_strategy.py  base_strategy.py  hybrid_strategy.py  rule_based_strategy.py  semantic_strategy.py  structured_strategy.py
src/intelligent_web_extractor/utils/: ai_client.py  browser_manager.py  errors.py  hidden_content.py  interaction.py  logger.py  web_utils.py
